--- a/plugin/src/main/resources/GUI/META-INF/resources/uii/template/reduced_content_template.html
+++ b/plugin/src/main/resources/GUI/META-INF/resources/uii/template/reduced_content_template.html
@@ -57,52 +57,16 @@
         content="#{HelperForm.buildDate}" />
     <title><h:outputText value="#{HelperForm.applicationHeaderTitle} - #{HelperForm.version}" /></title>
 
+    <!-- ========================================
+        CSS
+        ===================================== -->
+
     <!-- Bootstrap -->
-    <!--
-    <link
-        rel="stylesheet"
-        href="template/css/bootstrap.min.css?v=#{HelperForm.buildVersion}" />
-    -->
-    <!--
-    <link
-        rel="stylesheet"
-        href="template/css/bootstrap-slider.css?v=#{HelperForm.buildVersion}" />
-    -->
-    <!-- Theme CSS -->
-    <!--
-    <link
-        rel="stylesheet"
-        href="template/css/style.css?v=#{HelperForm.buildVersion}" />
-    -->
-    <!-- Font Awesome CSS -->
-    <!--
-    <link
-        rel="stylesheet"
-        href="template/css/font-awesome.css?v=#{HelperForm.buildVersion}" />
-    -->
-    <!-- Color CSS -->
-    <!--
-    <link
-        rel="stylesheet"
-        href="template/css/themes.css?v=#{HelperForm.buildVersion}" />
-    -->
-    <!-- intranda -->
-    <!--
-    <link
-        rel="stylesheet"
-        href="template/css/intranda.css?v=#{HelperForm.buildVersion}" />
-    <link rel="stylesheet" href="template/css/dist/goobiWorkflow.min.css?v=#{HelperForm.buildVersion}" />
-    -->
-
-
+    <link rel="stylesheet" href="template/assets/css/dist/bootstrap.css?v=#{HelperForm.buildVersion}" />
     <!-- Font Awesome -->
     <link rel="stylesheet" href="templatePG/css/lib/font-awesome.css?v=#{HelperForm.buildVersion}" />
-
-    <!-- Main styles (BS 5 + custom styles) -->
-    <link rel="stylesheet" href="templatePG/css/dist/bundle.css?v=#{HelperForm.buildVersion}" />
-
     <!-- ZLB styles -->
-    <link rel="stylesheet" href="template/assets/css/index.css?v=#{HelperForm.buildVersion}" />
+    <link rel="stylesheet" href="template/assets/css/dist/custom.css?v=#{HelperForm.buildVersion}" />
 
 
 
@@ -264,7 +228,9 @@
         <ui:include src="../includes/footer.xhtml" />
 
         <!-- JAVASCRIPT -->
+        <!--
         <script src="template/js/dist/goobiWorkflowJS.min.js?v=#{HelperForm.buildVersion}"></script>
+            -->
         <script>
 
 
@@ -276,6 +242,32 @@
 
 
                                 </script>
+
+
+            <script>
+
+
+
+                const form = document.querySelector('form');
+                form.addEventListener('click', handleClick);
+
+                function handleClick(e) {
+                    if(e.target.classList.contains('bi-question-circle')) {
+                    const formElement = e.target.parentElement.parentElement
+                    const helpText = formElement.querySelector('.help-text');
+                    helpText.classList.toggle('vis-hidden');
+                    console.log(helpText)
+
+
+                }
+                }
+
+
+
+
+
+            </script>
+
         <script>
 
 
