Fix logic for displaying form icons

--- a/plugin/src/main/resources/GUI/META-INF/resources/uii/includes/form_icons.xhtml
+++ b/plugin/src/main/resources/GUI/META-INF/resources/uii/includes/form_icons.xhtml
@@ -14,7 +14,7 @@
 
 <composite:implementation>
 
-<c:if test="#{duplicateElement != 'false' and showHelpBtn != 'false' }">
+<c:if test="#{duplicateElement != 'false' or showHelpBtn != 'false' }">
   <div class="form-icons">
     <!-- Duplicate form element -->
     <c:if test="#{duplicateElement != null ? duplicateElement : 'false'}">
