--- a/plugin/src/main/resources/GUI/META-INF/resources/uii/template/account_creation_wizzard.xhtml
+++ b/plugin/src/main/resources/GUI/META-INF/resources/uii/template/account_creation_wizzard.xhtml
@@ -34,6 +34,7 @@
                     inputRequired="true"
                     inputPlaceholder="#{msgs.login_new_account_accountName}"
                     inputDuplicate="true"
+                    showHelpBtn="true"
                     helpText="lorem ipsum" />
 
                 <zlb:label
